GDC/2. Network/pip.tf
// Creates a Public static IP
resource "azurerm_public_ip" "public_gateway" {
  name                = "pip-${var.application_name}-${var.environment_name}-gateway"
  resource_group_name = data.azurerm_resource_group.main.name
  location            = data.azurerm_resource_group.main.location
  allocation_method   = "Static"
}

resource "azurerm_public_ip" "public_dashboard" {
  name                = "pip-${var.application_name}-${var.environment_name}-dashboard"
  resource_group_name = data.azurerm_resource_group.main.name
  location            = data.azurerm_resource_group.main.location
  allocation_method   = "Static"
}
